@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.itbird.design {
    namespace adapter {
      class com.itbird.design.adapter.AdapterActivity {
          ~ datalist : List<String>
          {static} - TAG : String
          + isInitData()
          + testListViewV1()
          + testListViewV2()
          + testListViewV3()
          # getLayoutId()
          # initData()
          # initTitle()
          # initView()
          # setContentView()
          - testDemo()
          - viewListViewSource()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace adapter {
      class com.itbird.design.adapter.AdapterActivity.MyListViewAdapter {
          ~ data : List<String>
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  com.itbird.design.adapter.AdapterActivity -up-|> com.itbird.design.template.baseactivity.BaseActivity
  com.itbird.design.adapter.AdapterActivity o-- com.itbird.design.adapter.listview.v1.ItbirdListViewV1 : listViewV1
  com.itbird.design.adapter.AdapterActivity o-- com.itbird.design.adapter.listview.v2.ItbirdListViewV2 : listViewV2
  com.itbird.design.adapter.AdapterActivity o-- com.itbird.design.adapter.listview.v3.ItbirdListViewV3 : listViewV3
  com.itbird.design.adapter.AdapterActivity +-down- com.itbird.design.adapter.AdapterActivity.MyListViewAdapter
  com.itbird.design.adapter.AdapterActivity.MyListViewAdapter -up-|> android.widget.BaseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
